# trellobot

./: Cargo.toml  README.md  board.json  card.json  cardlist.json  cards.json  lists.json  memberlist.json
bot_framework/: Cargo.toml  bot_framework.wat
bot_framework/src/: lib.rs
examples/: create_board.rs  create_card.rs  create_label.rs  delete_cards.rs  parseboard.rs  parsecard.rs  parselists.rs  parsemembers.rs
src/: board.rs  bot.rs  card.rs  command.rs  commands.rs  database.rs  discordbot.rs  error.rs  lib.rs  lists.rs  main.rs  members.rs  runtime.rs  trellobot.service
src/trellobot/: .bashrc  board.rs  card.rs  error.rs  lists.rs  members.rs  mod.rs  users.rs
